--- a/ml-latest-small-model.ipynb
+++ b/ml-latest-small-model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting scikit-learn\n",
+      "  Using cached https://files.pythonhosted.org/packages/7e/90/bfe484adb16cdad078967b2b480517ec6c1180137e26fb4b015bcb090226/scikit_learn-0.20.3-cp36-cp36m-macosx_10_6_intel.macosx_10_9_intel.macosx_10_9_x86_64.macosx_10_10_intel.macosx_10_10_x86_64.whl\n",
+      "Requirement already satisfied: scipy>=0.13.3 in /Users/sokalong/anaconda3/envs/RL/lib/python3.6/site-packages (from scikit-learn) (1.2.1)\n",
+      "Requirement already satisfied: numpy>=1.8.2 in /Users/sokalong/anaconda3/envs/RL/lib/python3.6/site-packages (from scikit-learn) (1.16.2)\n",
+      "Installing collected packages: scikit-learn\n",
+      "Successfully installed scikit-learn-0.20.3\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +134,7 @@
        "4       1       50     5.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,18 +156,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "reader = Reader()\n",
     "processedData = Dataset.load_from_df(data[['userId', 'movieId', 'rating']], reader)\n",
-    "processedData = processedData.build_full_trainset()\n"
+    "processedDataTrain = processedData.build_full_trainset()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -186,18 +206,272 @@
     {
      "data": {
       "text/plain": [
-       "['SVD.pkl']"
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x114dbc860>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model = SVD(n_epochs=10, verbose=True)\n",
-    "model.fit(processedData)\n",
-    "joblib.dump(model, \"SVD.pkl\")"
+    "model.fit(processedDataTrain)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tuning the parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from surprise.model_selection import GridSearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Searching for best parameters...\n",
+      "Best RMSE score attained:  0.866081579180397\n",
+      "{'n_epochs': 30, 'lr_all': 0.005, 'n_factors': 50}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Searching for best parameters...\")\n",
+    "param_grid = {'n_epochs': [10, 20, 30], 'lr_all': [0.005, 0.010],\n",
+    "              'n_factors': [50, 100, 150, 200]}\n",
+    "gs = GridSearchCV(SVD, param_grid, measures=['rmse', 'mae'], cv=10)\n",
+    "\n",
+    "gs.fit(processedData)\n",
+    "\n",
+    "# best RMSE score\n",
+    "print(\"Best RMSE score attained: \", gs.best_score['rmse'])\n",
+    "\n",
+    "# combination of parameters that gave the best RMSE score\n",
+    "print(gs.best_params['rmse'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'split0_test_rmse': array([0.88514454, 0.88695446, 0.88912879, 0.89149227, 0.87324196,\n",
+      "       0.87258599, 0.87880441, 0.88193176, 0.87807116, 0.87275494,\n",
+      "       0.87736091, 0.87830372, 0.8778778 , 0.87684922, 0.88128071,\n",
+      "       0.88000597, 0.87354389, 0.87223885, 0.87617839, 0.88306166,\n",
+      "       0.89169506, 0.87678809, 0.87773849, 0.88291101]), 'split1_test_rmse': array([0.88094814, 0.87937976, 0.88136697, 0.88624518, 0.86910016,\n",
+      "       0.87038934, 0.87516396, 0.87483989, 0.87031062, 0.87180555,\n",
+      "       0.8760831 , 0.87854434, 0.87474988, 0.88349149, 0.87871356,\n",
+      "       0.87626782, 0.87229725, 0.87335177, 0.87697674, 0.87628463,\n",
+      "       0.89429945, 0.88624501, 0.8791213 , 0.87698024]), 'split2_test_rmse': array([0.87075915, 0.87326216, 0.87457369, 0.87929925, 0.86031662,\n",
+      "       0.86338956, 0.86302725, 0.86928683, 0.86191219, 0.86374751,\n",
+      "       0.86379437, 0.86836369, 0.86752796, 0.86467823, 0.86750159,\n",
+      "       0.86537071, 0.85897065, 0.86445196, 0.86722336, 0.86536729,\n",
+      "       0.88300762, 0.87195995, 0.86642752, 0.86303623]), 'split3_test_rmse': array([0.88794003, 0.89000223, 0.88779205, 0.89442473, 0.87644914,\n",
+      "       0.87887851, 0.87933472, 0.88063188, 0.87582864, 0.87630506,\n",
+      "       0.88110905, 0.88537   , 0.87992154, 0.87616727, 0.88369391,\n",
+      "       0.88192263, 0.87932274, 0.87650118, 0.87921285, 0.88103781,\n",
+      "       0.89644301, 0.8855411 , 0.88239256, 0.88442808]), 'split4_test_rmse': array([0.86729297, 0.87058598, 0.87124139, 0.87687819, 0.85757997,\n",
+      "       0.8649379 , 0.86489808, 0.86199792, 0.86016596, 0.863117  ,\n",
+      "       0.86262601, 0.86667831, 0.86853142, 0.86328153, 0.8667604 ,\n",
+      "       0.86935147, 0.86185791, 0.86709983, 0.86698493, 0.87049481,\n",
+      "       0.87827787, 0.87061472, 0.86745736, 0.86633697]), 'split5_test_rmse': array([0.86752828, 0.87135264, 0.87255631, 0.87407217, 0.86075412,\n",
+      "       0.86032197, 0.8613121 , 0.8637724 , 0.86102477, 0.85921454,\n",
+      "       0.86277138, 0.87221449, 0.86666365, 0.8617249 , 0.86429916,\n",
+      "       0.86572868, 0.85699036, 0.86126676, 0.86010894, 0.86280621,\n",
+      "       0.87484958, 0.86452845, 0.86632444, 0.86353645]), 'split6_test_rmse': array([0.86549017, 0.86778054, 0.86666218, 0.8704955 , 0.85661474,\n",
+      "       0.85727334, 0.86107011, 0.86324463, 0.85516502, 0.85995926,\n",
+      "       0.86404812, 0.86499876, 0.86355355, 0.86045155, 0.86479738,\n",
+      "       0.86463846, 0.85149901, 0.85913295, 0.86315546, 0.8641389 ,\n",
+      "       0.87662115, 0.86814276, 0.86394242, 0.86392052]), 'split7_test_rmse': array([0.8740428 , 0.87559435, 0.87891374, 0.87957114, 0.86389496,\n",
+      "       0.86813737, 0.86451966, 0.87138418, 0.86561928, 0.86535668,\n",
+      "       0.86592314, 0.87005343, 0.87083223, 0.86986816, 0.86806533,\n",
+      "       0.87223539, 0.86226874, 0.86203066, 0.8681452 , 0.86833845,\n",
+      "       0.88986235, 0.87088913, 0.87173559, 0.86919001]), 'split8_test_rmse': array([0.86948532, 0.8701339 , 0.87562376, 0.87541287, 0.86211639,\n",
+      "       0.86227285, 0.86625634, 0.87102782, 0.86332687, 0.86093906,\n",
+      "       0.86686535, 0.86366245, 0.87150747, 0.8655532 , 0.86719092,\n",
+      "       0.86248523, 0.86545497, 0.86286869, 0.86342747, 0.86402324,\n",
+      "       0.87696819, 0.87145988, 0.86616927, 0.86216653]), 'split9_test_rmse': array([0.89368952, 0.89533973, 0.89733923, 0.89609254, 0.88112556,\n",
+      "       0.88327442, 0.88487839, 0.8830588 , 0.87926541, 0.87973897,\n",
+      "       0.88390235, 0.88460258, 0.88997278, 0.88359418, 0.88464306,\n",
+      "       0.88623551, 0.87861028, 0.87777653, 0.88334052, 0.88921102,\n",
+      "       0.89417772, 0.88690906, 0.88953628, 0.8886468 ]), 'mean_test_rmse': array([0.87623209, 0.87803858, 0.87951981, 0.88239838, 0.86611936,\n",
+      "       0.86814612, 0.8699265 , 0.87211761, 0.86706899, 0.86729386,\n",
+      "       0.87044838, 0.87327918, 0.87311383, 0.87056597, 0.8726946 ,\n",
+      "       0.87242419, 0.86608158, 0.86767192, 0.87047539, 0.8724764 ,\n",
+      "       0.8856202 , 0.87530782, 0.87308452, 0.87211528]), 'std_test_rmse': array([0.00945954, 0.00905811, 0.00896693, 0.00858797, 0.00798871,\n",
+      "       0.00784628, 0.00828586, 0.00745956, 0.00790966, 0.00692453,\n",
+      "       0.00782862, 0.00753455, 0.00740899, 0.00837536, 0.00787688,\n",
+      "       0.00785296, 0.00897359, 0.00642423, 0.00745354, 0.00886548,\n",
+      "       0.00808193, 0.00772153, 0.00818718, 0.00963958]), 'rank_test_rmse': array([20, 21, 22, 23,  2,  6,  7, 12,  3,  4,  8, 18, 17, 10, 15, 13,  1,\n",
+      "        5,  9, 14, 24, 19, 16, 11]), 'split0_test_mae': array([0.68116576, 0.68200794, 0.6840796 , 0.6851857 , 0.67073535,\n",
+      "       0.67067662, 0.67412462, 0.67810484, 0.6745247 , 0.66936541,\n",
+      "       0.67318333, 0.6741872 , 0.67326751, 0.67000705, 0.67810523,\n",
+      "       0.67735146, 0.67053566, 0.66890717, 0.67285078, 0.67850138,\n",
+      "       0.68510626, 0.67446813, 0.675081  , 0.6789791 ]), 'split1_test_mae': array([0.68252509, 0.68134727, 0.68257856, 0.68838238, 0.66985829,\n",
+      "       0.67275049, 0.67470182, 0.67375741, 0.6712094 , 0.67197792,\n",
+      "       0.67672526, 0.67705307, 0.67079857, 0.68011631, 0.67713083,\n",
+      "       0.67569949, 0.67063622, 0.67251284, 0.67462602, 0.6756274 ,\n",
+      "       0.68558488, 0.67871972, 0.67594881, 0.67463996]), 'split2_test_mae': array([0.66688999, 0.66869502, 0.66908751, 0.67352694, 0.65868997,\n",
+      "       0.65960196, 0.65877586, 0.66325056, 0.6576316 , 0.65956082,\n",
+      "       0.6592501 , 0.66199175, 0.66162695, 0.66042731, 0.66004874,\n",
+      "       0.65962812, 0.65338336, 0.65898538, 0.66176643, 0.65890512,\n",
+      "       0.67365865, 0.66503139, 0.66042066, 0.65918674]), 'split3_test_mae': array([0.68645315, 0.68852327, 0.6867126 , 0.69164901, 0.6751666 ,\n",
+      "       0.6771971 , 0.67802202, 0.67714265, 0.67589097, 0.67461605,\n",
+      "       0.67680848, 0.68185286, 0.67490895, 0.67216726, 0.67761818,\n",
+      "       0.67833627, 0.67402944, 0.67209792, 0.67376098, 0.67718937,\n",
+      "       0.6860678 , 0.67954381, 0.67691155, 0.67836804]), 'split4_test_mae': array([0.6688008 , 0.6716318 , 0.67235404, 0.67717575, 0.66062381,\n",
+      "       0.66477243, 0.66486551, 0.66279958, 0.66157727, 0.66280219,\n",
+      "       0.66364832, 0.66731842, 0.66674098, 0.66205464, 0.66793711,\n",
+      "       0.66602569, 0.66235806, 0.66439324, 0.66527786, 0.66894927,\n",
+      "       0.67637606, 0.67024892, 0.66795097, 0.66755425]), 'split5_test_mae': array([0.66555321, 0.66995741, 0.67017656, 0.6720697 , 0.6584288 ,\n",
+      "       0.65709387, 0.65784617, 0.66156881, 0.65751695, 0.65697382,\n",
+      "       0.66194574, 0.66808928, 0.6605059 , 0.6584767 , 0.65950139,\n",
+      "       0.66406214, 0.65390164, 0.65907548, 0.65842074, 0.6585328 ,\n",
+      "       0.66692132, 0.65990905, 0.65990644, 0.65913804]), 'split6_test_mae': array([0.66837199, 0.67046108, 0.66987833, 0.67269874, 0.65868643,\n",
+      "       0.65919427, 0.66398946, 0.66402044, 0.65797061, 0.6621867 ,\n",
+      "       0.66547982, 0.6676941 , 0.66312359, 0.65909709, 0.6680654 ,\n",
+      "       0.66371465, 0.65413144, 0.66088721, 0.66346095, 0.66582852,\n",
+      "       0.67293887, 0.6691887 , 0.66451049, 0.66561708]), 'split7_test_mae': array([0.6741558 , 0.67486275, 0.67689726, 0.67846211, 0.66389834,\n",
+      "       0.66566287, 0.66512176, 0.67141059, 0.66430966, 0.66364961,\n",
+      "       0.66768549, 0.66819981, 0.66700977, 0.66696147, 0.66486393,\n",
+      "       0.66919937, 0.6627528 , 0.66228604, 0.66849003, 0.66976047,\n",
+      "       0.68126524, 0.66719283, 0.67073873, 0.66836809]), 'split8_test_mae': array([0.67037312, 0.67105046, 0.67585763, 0.67505175, 0.66220922,\n",
+      "       0.66260198, 0.66657941, 0.66766185, 0.66246483, 0.6622054 ,\n",
+      "       0.66657357, 0.66357995, 0.66699268, 0.66569635, 0.66729707,\n",
+      "       0.66218522, 0.66260145, 0.66259038, 0.66109242, 0.66443475,\n",
+      "       0.67069146, 0.66653238, 0.6666998 , 0.6622397 ]), 'split9_test_mae': array([0.68822776, 0.68953402, 0.68969403, 0.68950663, 0.67781765,\n",
+      "       0.6795506 , 0.67875575, 0.67816073, 0.67580491, 0.67729292,\n",
+      "       0.67696693, 0.68034637, 0.67944911, 0.67654131, 0.67767843,\n",
+      "       0.68052834, 0.67461263, 0.67364433, 0.67923361, 0.68252232,\n",
+      "       0.68654258, 0.68071807, 0.68270668, 0.68301715]), 'mean_test_mae': array([0.67525167, 0.6768071 , 0.67773161, 0.68037087, 0.66561145,\n",
+      "       0.66691022, 0.66827824, 0.66978775, 0.66589009, 0.66606308,\n",
+      "       0.6688267 , 0.67103128, 0.6684424 , 0.66715455, 0.66982463,\n",
+      "       0.66967307, 0.66389427, 0.665538  , 0.66789798, 0.67002514,\n",
+      "       0.67851531, 0.6711553 , 0.67008751, 0.66971082]), 'std_test_mae': array([0.00812191, 0.00750736, 0.00717041, 0.00717482, 0.00686602,\n",
+      "       0.00740194, 0.00722617, 0.00639272, 0.0073146 , 0.00645301,\n",
+      "       0.00628327, 0.00654927, 0.0058015 , 0.00709252, 0.00695818,\n",
+      "       0.00725014, 0.00786222, 0.00543737, 0.00658256, 0.00785212,\n",
+      "       0.00690907, 0.00660114, 0.00713983, 0.00814723]), 'rank_test_mae': array([20, 21, 22, 24,  3,  6,  9, 14,  4,  5, 11, 18, 10,  7, 15, 12,  1,\n",
+      "        2,  8, 16, 23, 19, 17, 13]), 'mean_fit_time': array([ 1.69847815,  2.5985688 ,  3.50194213,  4.20765457,  1.45744424,\n",
+      "        2.55477269,  3.23556523,  3.8608669 ,  3.21723521,  5.18182795,\n",
+      "        6.9460542 ,  8.79696662,  3.383741  ,  5.21093118,  6.8151912 ,\n",
+      "        8.61232548,  4.95774474,  7.6436203 , 10.23411007, 11.93558581,\n",
+      "        4.55597653,  7.61898677, 10.08927548, 12.79358389]), 'std_fit_time': array([0.0969136 , 0.01477243, 0.04107929, 0.19957338, 0.10091491,\n",
+      "       0.0831001 , 0.12233397, 0.01008264, 0.25272935, 0.0147673 ,\n",
+      "       0.01692373, 0.03291449, 0.02286093, 0.02213746, 0.15164164,\n",
+      "       0.04737917, 0.00882499, 0.03026096, 0.0198874 , 0.63124725,\n",
+      "       0.33577446, 0.13361   , 0.44885679, 0.06731731]), 'mean_test_time': array([0.09480307, 0.08160553, 0.10064631, 0.09405267, 0.07467628,\n",
+      "       0.07952991, 0.0904027 , 0.07435505, 0.09599755, 0.08181655,\n",
+      "       0.10012455, 0.08607001, 0.08333168, 0.10216613, 0.0848171 ,\n",
+      "       0.10125952, 0.0787384 , 0.09768875, 0.08069811, 0.07859023,\n",
+      "       0.09149821, 0.07944286, 0.11764977, 0.08049102]), 'std_test_time': array([0.08581242, 0.04986184, 0.06721861, 0.06240404, 0.0473294 ,\n",
+      "       0.05083749, 0.06175747, 0.04947066, 0.06297663, 0.0481051 ,\n",
+      "       0.06757353, 0.05410018, 0.05178941, 0.07212083, 0.05504894,\n",
+      "       0.07123435, 0.04847858, 0.06566662, 0.05109703, 0.04945814,\n",
+      "       0.06349289, 0.04373409, 0.10517697, 0.04704794]), 'params': [{'n_epochs': 10, 'lr_all': 0.005, 'n_factors': 50}, {'n_epochs': 10, 'lr_all': 0.005, 'n_factors': 100}, {'n_epochs': 10, 'lr_all': 0.005, 'n_factors': 150}, {'n_epochs': 10, 'lr_all': 0.005, 'n_factors': 200}, {'n_epochs': 10, 'lr_all': 0.01, 'n_factors': 50}, {'n_epochs': 10, 'lr_all': 0.01, 'n_factors': 100}, {'n_epochs': 10, 'lr_all': 0.01, 'n_factors': 150}, {'n_epochs': 10, 'lr_all': 0.01, 'n_factors': 200}, {'n_epochs': 20, 'lr_all': 0.005, 'n_factors': 50}, {'n_epochs': 20, 'lr_all': 0.005, 'n_factors': 100}, {'n_epochs': 20, 'lr_all': 0.005, 'n_factors': 150}, {'n_epochs': 20, 'lr_all': 0.005, 'n_factors': 200}, {'n_epochs': 20, 'lr_all': 0.01, 'n_factors': 50}, {'n_epochs': 20, 'lr_all': 0.01, 'n_factors': 100}, {'n_epochs': 20, 'lr_all': 0.01, 'n_factors': 150}, {'n_epochs': 20, 'lr_all': 0.01, 'n_factors': 200}, {'n_epochs': 30, 'lr_all': 0.005, 'n_factors': 50}, {'n_epochs': 30, 'lr_all': 0.005, 'n_factors': 100}, {'n_epochs': 30, 'lr_all': 0.005, 'n_factors': 150}, {'n_epochs': 30, 'lr_all': 0.005, 'n_factors': 200}, {'n_epochs': 30, 'lr_all': 0.01, 'n_factors': 50}, {'n_epochs': 30, 'lr_all': 0.01, 'n_factors': 100}, {'n_epochs': 30, 'lr_all': 0.01, 'n_factors': 150}, {'n_epochs': 30, 'lr_all': 0.01, 'n_factors': 200}], 'param_n_epochs': [10, 10, 10, 10, 10, 10, 10, 10, 20, 20, 20, 20, 20, 20, 20, 20, 30, 30, 30, 30, 30, 30, 30, 30], 'param_lr_all': [0.005, 0.005, 0.005, 0.005, 0.01, 0.01, 0.01, 0.01, 0.005, 0.005, 0.005, 0.005, 0.01, 0.01, 0.01, 0.01, 0.005, 0.005, 0.005, 0.005, 0.01, 0.01, 0.01, 0.01], 'param_n_factors': [50, 100, 150, 200, 50, 100, 150, 200, 50, 100, 150, 200, 50, 100, 150, 200, 50, 100, 150, 200, 50, 100, 150, 200]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(gs.cv_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'rmse': <surprise.prediction_algorithms.matrix_factorization.SVD at 0x107e377b8>,\n",
+       " 'mae': <surprise.prediction_algorithms.matrix_factorization.SVD at 0x107f2ea58>}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gs.best_estimator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'rmse': {'n_epochs': 30, 'lr_all': 0.005, 'n_factors': 50},\n",
+       " 'mae': {'n_epochs': 30, 'lr_all': 0.005, 'n_factors': 50}}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gs.best_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = SVD(n_epochs=30, lr_all=0.005, n_factors=50, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['SVDtuned.pkl']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(model, \"SVDtuned.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Making predictions"
    ]
   },
   {
@@ -215,6 +489,13 @@
     "    estimatedRating = prediction[3]\n",
     "    recommendation.append((intMovieId,estimatedRating))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
