--- a/ml-latest-small-model.ipynb
+++ b/ml-latest-small-model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,6 @@
     "    data = pd.read_csv(ratingsPath,header=None,skiprows=1, \n",
     "                 names=['userId', 'movieId', 'rating', 'timestamp'])\n",
     "\n",
-    "\n",
     "    processedData = data.drop(['timestamp'],axis=1)\n",
     "\n",
     "    return processedData"
@@ -61,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -134,23 +133,24 @@
        "4       1       50     5.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = loadDataSet()\n",
+    "\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "#save the dataset\n",
+    "data = loadDataSet()\n",
     "data.to_pickle(\"training_data.pkl\")"
    ]
   },
@@ -160,6 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "reader = Reader()\n",
     "processedData = Dataset.load_from_df(data[['userId', 'movieId', 'rating']], reader)\n",
     "processedDataTrain = processedData.build_full_trainset()\n"
@@ -215,7 +216,7 @@
     }
    ],
    "source": [
-    "model = SVD(n_epochs=10, verbose=True)\n",
+    "model = SVD()\n",
     "model.fit(processedDataTrain)"
    ]
   },
@@ -440,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +459,7 @@
        "['SVDtuned.pkl']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
